--- a/20161102Demo.ipynb
+++ b/20161102Demo.ipynb
@@ -171,6 +171,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "酸民\n",
+      "婉君\n",
+      "也\n",
+      "可以\n",
+      "報名\n",
+      "嗎\n",
+      "?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "jieba.load_userdict(\"userdict.txt\")\n",
+    "a = '酸民婉君也可以報名嗎?'\n",
+    "for w in jieba.cut(a):\n",
+    "    print(w)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
