--- a/20161102Demo.ipynb
+++ b/20161102Demo.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  英文斷詞"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -21,6 +28,13 @@
    "source": [
     "a = 'this is a book'\n",
     "a.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 中文斷詞"
    ]
   },
   {
@@ -84,6 +98,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 正規表達法斷句"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -126,6 +147,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 全模式切詞"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
@@ -148,6 +176,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 精準模式切詞"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -167,6 +202,13 @@
     "s = \"大巨蛋案對市府同仁下封口令？柯P否認\"\n",
     "seg_list=jieba.cut(s,cut_all=False)\n",
     "print(\"Full Mode:\",\"/ \".join(seg_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 載入字典"
    ]
   },
   {
@@ -196,6 +238,242 @@
     "a = '酸民婉君也可以報名嗎?'\n",
     "for w in jieba.cut(a):\n",
     "    print(w)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 將List 合併成字串"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a-b-c'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ['a', 'b', 'c']\n",
+    "'-'.join(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Full Mode Segmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full Mode: 大/ 巨蛋/ 案/ 對/ 市府/ 同仁/ 下/ 封口/ 封口令/ 口令/ / / 柯/ P/ 否/ 認\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "s = \"大巨蛋案對市府同仁下封口令？柯P否認\"\n",
+    "seg_list =jieba.cut(s , cut_all=True)\n",
+    "#for w in seg_list:\n",
+    "#    print(w)\n",
+    "    \n",
+    "print(\"Full Mode:\",\"/ \".join(seg_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Default Mode Segmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default Mode: 大/ 巨蛋/ 案對/ 市府/ 同仁/ 下/ 封口令/ ？/ 柯/ P/ 否認\n"
+     ]
+    }
+   ],
+   "source": [
+    "seg_list =jieba.cut(s , cut_all=False)\n",
+    "    \n",
+    "print(\"Default Mode:\",\"/ \".join(seg_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default Mode: 大巨蛋/ 案對/ 市府/ 同仁/ 下/ 封口令/ ？/ 柯P/ 否認\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "jieba.load_userdict(\"userdict.txt\")\n",
+    "seg_list =jieba.cut(s )\n",
+    "print(\"Default Mode:\",\"/ \".join(seg_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 取出詞性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "大巨蛋 ns\n",
+      "案 ng\n",
+      "對 p\n",
+      "市府 n\n",
+      "同仁 nr\n",
+      "下 f\n",
+      "封口令 n\n",
+      "？ x\n",
+      "柯P nr\n",
+      "否認 v\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba.posseg as pseg\n",
+    "jieba.load_userdict(\"userdict.txt\")\n",
+    "seg_list = pseg.cut(s)\n",
+    "for w in seg_list:\n",
+    "    #print(w)\n",
+    "    print(w.word, w.flag)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 抓出字詞位置"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "大巨蛋 0 3\n",
+      "案對 3 5\n",
+      "市府 5 7\n",
+      "同仁 7 9\n",
+      "下 9 10\n",
+      "封口令 10 13\n",
+      "？ 13 14\n",
+      "柯P 14 16\n",
+      "否認 16 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "words=jieba.tokenize(s)\n",
+    "for tw in words:\n",
+    "    print(tw[0],tw[1],tw[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 提取關鍵字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "封口令\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba.analyse\n",
+    "tags=jieba.analyse.extract_tags(s, 1)\n",
+    "print(\",\".join(tags))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "柯P\n"
+     ]
+    }
+   ],
+   "source": [
+    "tags=jieba.analyse.extract_tags(s,1,allowPOS=['nr'])\n",
+    "print(\",\".join(tags))"
    ]
   },
   {
