--- a/20161102Demo.ipynb
+++ b/20161102Demo.ipynb
@@ -477,6 +477,470 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## n-gram 切詞"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "那我\n",
+      "我們\n",
+      "們酸\n",
+      "酸民\n",
+      "民婉\n",
+      "婉君\n",
+      "君也\n",
+      "也可\n",
+      "可以\n",
+      "以報\n",
+      "報名\n",
+      "名嗎\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence='那我們酸民婉君也可以報名嗎'\n",
+    "#print(sentence[0:2])\n",
+    "for i in range(0, len(sentence) - 2 + 1):\n",
+    "    print(sentence[i:i+2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tri-Gram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "那我們\n",
+      "我們酸\n",
+      "們酸民\n",
+      "酸民婉\n",
+      "民婉君\n",
+      "婉君也\n",
+      "君也可\n",
+      "也可以\n",
+      "可以報\n",
+      "以報名\n",
+      "報名嗎\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence='那我們酸民婉君也可以報名嗎'\n",
+    "\n",
+    "for i in range(0, len(sentence) - 3 + 1):\n",
+    "    print(sentence[i:i+3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4 Gram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "那我們酸\n",
+      "我們酸民\n",
+      "們酸民婉\n",
+      "酸民婉君\n",
+      "民婉君也\n",
+      "婉君也可\n",
+      "君也可以\n",
+      "也可以報\n",
+      "可以報名\n",
+      "以報名嗎\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence='那我們酸民婉君也可以報名嗎'\n",
+    "\n",
+    "for i in range(0, len(sentence) - 4 + 1):\n",
+    "    print(sentence[i:i+4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 建立n-gram 函式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def ngram(sentence, n = 2):\n",
+    "    sentence_ary = []\n",
+    "    for i in range(0, len(sentence) - n + 1):\n",
+    "        sentence_ary.append(sentence[i:i+n])\n",
+    "    return sentence_ary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['那我們酸',\n",
+       " '我們酸民',\n",
+       " '們酸民婉',\n",
+       " '酸民婉君',\n",
+       " '民婉君也',\n",
+       " '婉君也可',\n",
+       " '君也可以',\n",
+       " '也可以報',\n",
+       " '可以報名',\n",
+       " '以報名嗎']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ngram(sentence, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 針對n-gram 進行統計"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('姸憬', 3), ('余天', 3), ('李姸', 3)]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = '''李姸憬和賀姓計程車運將互毆案越演越烈，余天前天陪李姸憬開記者會，義正嚴詞卻遭警方打臉，還被網友諷「挺朋友很好，出門要帶腦」，對此余天昨表示自己立場中立，不後悔幫李姸憬出頭，老婆李亞萍也力挺，不過他的兒子余祥銓卻過意不去，因為是他請余天出馬'''\n",
+    "\n",
+    "import re\n",
+    "from collections import Counter\n",
+    "n = 2\n",
+    "sentence_ary = []\n",
+    "\n",
+    "# 斷句\n",
+    "seg_sentence = re.split('，|」|「', sentence)\n",
+    "\n",
+    "# 根據每個句子取n-gram\n",
+    "for seg in seg_sentence:\n",
+    "    for i in range(0, len(seg) - n + 1):\n",
+    "        sentence_ary.append(seg[i:i+n])\n",
+    "        \n",
+    "# 使用Counter 計算字詞頻率\n",
+    "c = Counter(sentence_ary)\n",
+    "c.most_common(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 建立n-gram 統計函式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def ngram(sentence, n = 2):\n",
+    "    sentence_ary = []\n",
+    "    \n",
+    "    # 斷句\n",
+    "    seg_sentence = re.split('，|」|「', sentence)\n",
+    "\n",
+    "    # 根據每個句子取n-gram\n",
+    "    for seg in seg_sentence:\n",
+    "        for i in range(0, len(seg) - n + 1):\n",
+    "            sentence_ary.append(seg[i:i+n])\n",
+    "\n",
+    "    # 使用Counter 計算字詞頻率\n",
+    "    c = Counter(sentence_ary)\n",
+    "    \n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## n-gram 範例"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('李姸憬', 3), ('憬開記', 1), ('方打臉', 1)]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = '''李姸憬和賀姓計程車運將互毆案越演越烈，余天前天陪李姸憬開記者會，義正嚴詞卻遭警方打臉，還被網友諷「挺朋友很好，出門要帶腦」，對此余天昨表示自己立場中立，不後悔幫李姸憬出頭，老婆李亞萍也力挺，不過他的兒子余祥銓卻過意不去，因為是他請余天出馬'''\n",
+    "c = ngram(sentence, 3)\n",
+    "c.most_common(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 使用字典做統計"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 3, 'b': 2, 'c': 1}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a   =  ['a', 'b', 'a', 'b', 'c', 'a']\n",
+    "dic =  {}\n",
+    "\n",
+    "for w in a:\n",
+    "    if w not in dic:\n",
+    "        dic[w] = 1\n",
+    "    else:\n",
+    "        dic[w] = dic[w] + 1\n",
+    "\n",
+    "dic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Counter\n",
+    "- https://docs.python.org/3/library/collections.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 3), ('b', 2), ('c', 1)]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "c = Counter(a)\n",
+    "c.most_common(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 正規表達法斷句"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "國泰金融集團長期支持籃球運動\n",
+      "2010年11月起更成為NBA台灣地區金融業獨家合作夥伴\n",
+      "在國泰金融集團的支持贊助下\n",
+      "林書豪於2011/8/9\n",
+      "2011/8/12返台\n",
+      "參加\n",
+      "2011國泰夢想小勇士林書豪籃球訓練營\n",
+      "\n",
+      "指導國中\n",
+      "國小學生籃球技巧\n",
+      "除此之外\n",
+      "為了讓球迷朋友與家長一窺林書豪學業球技兩得意的成功秘訣\n",
+      "國泰人壽特別於2011/8/12舉辦\n",
+      "國泰菁英育成\n",
+      "哈佛小子林書豪的NBA之路\n",
+      "球迷見面會\n",
+      "暢談林書豪的成長過程及求學經驗談\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re \n",
+    "delimiter=\"，|。|、|\\(|\\)|『|』|-|【|】|~\"\n",
+    "text='''國泰金融集團長期支持籃球運動，2010年11月起更成為NBA台灣地區金融業獨家合作夥伴。在國泰金融集團的支持贊助下，林書豪於2011/8/9~2011/8/12返台，參加【2011國泰夢想小勇士林書豪籃球訓練營】，指導國中、國小學生籃球技巧。除此之外，為了讓球迷朋友與家長一窺林書豪學業球技兩得意的成功秘訣，國泰人壽特別於2011/8/12舉辦『國泰菁英育成-哈佛小子林書豪的NBA之路』球迷見面會，暢談林書豪的成長過程及求學經驗談。'''\n",
+    "sentenceAry=re.split(delimiter,text)\n",
+    "for i in re.split(delimiter,text):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'國泰金融集團長期支持運動'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a= '國泰金融集團長期支持籃球運動'\n",
+    "''.join(a.split('籃球'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 移除關鍵字函式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def removeKey(text,keyword):\n",
+    "    textAry=text\n",
+    "    for key in keyword:\n",
+    "        textAry=''.join(textAry.split(key))\n",
+    "    return textAry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'將公布'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "removeKey('民進黨後天將公布' , ['民進黨', '後天'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
