long phrase first

--- a/20161102Demo.ipynb
+++ b/20161102Demo.ipynb
@@ -941,6 +941,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 實作長詞優先斷詞"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#sentence = '''李姸憬和賀姓計程車運將互毆案越演越烈，余天前天陪李姸憬開記者會，義正嚴詞卻遭警方打臉，還被網友諷「挺朋友很好，出門要帶腦」，對此余天昨表示自己立場中立，不後悔幫李姸憬出頭，老婆李亞萍也力挺，不過他的兒子余祥銓卻過意不去，因為是他請余天出馬'''\n",
+    "sentence = '''「青年要勞權！拒砍七天假！」青年團體代表繼昨闖民進黨立法院總召柯建銘辦公室後，今天突襲闖進民進黨中央黨部10樓，抨擊民進黨號稱和人民站在一起，但是執政後這些政客嘴臉是什麼？完全和國民黨沒有兩樣，他們呼籲總統蔡英文實質回應他們的訴求，否則今天絕不會離開。\n",
+    "青年團體昨闖柯建銘辦公室，高喊「青年要勞權、拒砍七天假」口號，要求柯建銘出門說明，警方隨後將抗議者強制驅離現場。今天是民進黨中常會，兼任黨主席的蔡英文預計在下午13時30分與會；而約20餘位青年團體代表今約在12時20分透過走樓梯，欲闖進9樓中常會現場，但是安全門被鎖住，於是他們只好闖進10樓的民進黨中央黨部，接著在10樓大廳大喊高喊「砍假總統、公開辯論」。\n",
+    "高教公會青年行動委員會代表張宗坤、反教育商品化聯盟代表謝毅弘等人佔領10樓後表示，在過去幾個月以來，民進黨無視青年勞動者惡劣的勞動處境，一路以粗暴、拒絕與社會溝通的姿態，就是為了「砍掉七天國定假日」。他們今天提出三大訴求：一、蔡英文總統應盡速出面回應青年的質疑：「砍七天假是否符合蔡英文承諾的工時下降、薪資增加、保障非典勞動者權益？」二、蔡英文應回歸選前政治承諾，調降工時、拉高薪資應為勞動立法精神！三、民進黨應立即撤回砍7天假提案！\n",
+    "他們接著先靜坐在現場持續表達訴求，後來執意要透過民進黨內部玻璃門到9樓中常會現場，但遭到現場數十名警方強力阻擋，雙方發生嚴重拉扯，警方過程中大喊不要「違法推擠警察」，青年則喊「砍假總統、出來面對」，過程中有人一度跌倒在地。此外，青年代表還在現場牆壁、大門張貼抗議標語、貼紙。\n",
+    "警方和青年代表僵持1個多小時未果，隨後改到1樓大門外持續表達訴求。（陳雅芃／台北報導）'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def ngram(sentence, n = 2):\n",
+    "    sentence_ary = []\n",
+    "    \n",
+    "    delimiter = '，|。|、|\\(|\\)|『|』|-|【|】|~|「|」' \n",
+    "    # 斷句\n",
+    "    seg_sentence = re.split(delimiter, sentence)\n",
+    "\n",
+    "    # 根據每個句子取n-gram\n",
+    "    for seg in seg_sentence:\n",
+    "        for i in range(0, len(seg) - n + 1):\n",
+    "            sentence_ary.append(seg[i:i+n])\n",
+    "\n",
+    "    # 使用Counter 計算字詞頻率\n",
+    "    c = Counter(sentence_ary)\n",
+    "    \n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#ngram(sentence , 4).items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def removeKey(text,keyword):\n",
+    "    textAry=text\n",
+    "    for key in keyword:\n",
+    "        textAry=''.join(textAry.split(key))\n",
+    "    return textAry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(4,1,-1):\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['蔡英文', '民進黨', '他們', '代表', '現場', '青年']"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keywords = []\n",
+    "\n",
+    "# 長詞優先法\n",
+    "for n in range(4,1,-1):\n",
+    "    # 移除關鍵字\n",
+    "    removed_sentence = removeKey(sentence , keywords)\n",
+    "    # 切n-gram\n",
+    "    for word, cnt in ngram(removed_sentence , n).items():\n",
+    "        # 將超過閥值的資料加到關鍵字組\n",
+    "        if cnt >= 5:\n",
+    "            keywords.append(word)\n",
+    "            \n",
+    "# 表列關鍵字\n",
+    "keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
