crawler get keyword

--- a/20161102Demo.ipynb
+++ b/20161102Demo.ipynb
@@ -1073,22 +1073,71 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 抽取同義詞"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "柯文哲\n",
+      "柯P\n",
+      "KP\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "res = requests.get('https://zh.wikipedia.org/wiki/%E6%9F%AF%E6%96%87%E5%93%B2')\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "for synonym in soup.select('#mw-content-text p b'):\n",
+    "    print(synonym.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 從新聞抽取重要字詞"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "教育部\n",
+      "潘文忠\n",
+      "雙薪肥貓\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "res = requests.get('http://news.ltn.com.tw/news/life/breakingnews/1874451')\n",
+    "\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "for keyword in soup.select('.con_keyword a'):\n",
+    "    print(keyword.text)"
+   ]
   }
  ],
  "metadata": {
