add word counter

--- a/20161109Demo.ipynb
+++ b/20161109Demo.ipynb
@@ -186,6 +186,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 使用 Counter 做統計\n",
+    "- https://docs.python.org/3.5/library/collections.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'a': 3, 'b': 2, 'c': 1})"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ['a', 'b', 'c', 'a', 'b', 'a']\n",
+    "\n",
+    "from collections import Counter\n",
+    "c = Counter(a)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 3), ('b', 2)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.most_common(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import jieba\n",
+    "jieba.load_userdict(\"userdict.txt\")\n",
+    "\n",
+    "# 使用Jieba 切詞\n",
+    "word_list = []\n",
+    "for word in jieba.cut(apple):\n",
+    "    if len(word) >=2:\n",
+    "        word_list.append(word)\n",
+    "\n",
+    "# 用Counter統計字詞\n",
+    "from collections import Counter\n",
+    "c = Counter(word_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "投票 14\n",
+      "川普 14\n",
+      "希拉蕊 13\n",
+      "當選 5\n",
+      "提前 5\n",
+      "支持者 5\n",
+      "拉丁裔 5\n",
+      "選舉人票 5\n",
+      "美國 4\n",
+      "台灣 4\n",
+      "時間 4\n",
+      "開票 4\n",
+      "媒體 4\n",
+      "領先 4\n",
+      "城鎮 4\n",
+      "女性 4\n",
+      "造勢 4\n",
+      "總統 4\n",
+      "加州 3\n",
+      "北卡羅萊納州 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word, cnt in c.most_common(20):\n",
+    "    print(word, cnt)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
