add title analysis

--- a/20161109Demo.ipynb
+++ b/20161109Demo.ipynb
@@ -303,6 +303,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 分析當日所有蘋果新聞頭條詞頻"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "newslist = []\n",
+    "## 抓取每頁分頁清單\n",
+    "for page in range(1,31):\n",
+    "    res = requests.get('http://www.appledaily.com.tw/realtimenews/section/new/{}'.format(page))\n",
+    "    soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "    # 根據清單拿出標題\n",
+    "    for news in soup.select('.rtddt a'):\n",
+    "        title = news.select('h1')[0].text\n",
+    "        newslist.append(title)\n",
+    "        #print(news.select('h1')[0].text)\n",
+    "        #print('=============================')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import jieba\n",
+    "import re\n",
+    "jieba.load_userdict(\"userdict.txt\")\n",
+    "\n",
+    "# 資料清理\n",
+    "word_list = []\n",
+    "for entry in newslist:\n",
+    "    news = entry\n",
+    "    \n",
+    "    if entry.find('】') > 0 :\n",
+    "        news = news.split('】')[1]\n",
+    "    if entry.find('...') > 0:\n",
+    "        news = news.split('...')[0]\n",
+    "    if entry.find('(') > 0:\n",
+    "        news = news.split('(')[0]\n",
+    "    # 篩選字詞長度 >=2 以及是中文的字詞\n",
+    "    for word in jieba.cut(news):\n",
+    "        if len(word) >= 2 and re.match('[\\u4e00-\\u9fa5]+', word):\n",
+    "            word_list.append(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "川普 34\n",
+      "希拉蕊 23\n",
+      "投票 19\n",
+      "台灣 16\n",
+      "美國 15\n",
+      "馬英九 13\n",
+      "中國 11\n",
+      "明年 11\n",
+      "總統 11\n",
+      "美大選 10\n",
+      "這樣 10\n",
+      "網友 9\n",
+      "日本 9\n",
+      "女友 8\n",
+      "釋法 8\n",
+      "香港 7\n",
+      "人大 7\n",
+      "抗議 7\n",
+      "美國大選 7\n",
+      "正妹 6\n",
+      "全球 6\n",
+      "大選 6\n",
+      "朴槿惠 6\n",
+      "女主播 6\n",
+      "億元 6\n",
+      "選舉 6\n",
+      "結果 6\n",
+      "十一月 6\n",
+      "醫療 6\n",
+      "蘋果 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "# 使用Collections 的 Counter 進行統計\n",
+    "c = Counter(word_list)\n",
+    "for word, cnt in c.most_common(30):\n",
+    "    print(word, cnt)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
