--- a/20161109Demo.ipynb
+++ b/20161109Demo.ipynb
@@ -415,6 +415,300 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TF-IDF 計算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a, abb, abc = [\"a\"], [\"a\",\"b\",\"b\"], [\"a\",\"b\",\"c\"]\n",
+    "D=[a,abb,abc]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 0.0, 0.0)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tfidf(\"a\", a, D)\n",
+    "import scipy\n",
+    "\n",
+    "tf    =  1 / 1\n",
+    "idf   =  scipy.log(3 / 3)\n",
+    "tf, idf, tf * idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6666666666666666, 0.40546510810816438, 0.27031007207210955)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tfidf(\"b\", abb, D)\n",
+    "tf  = 2 / 3\n",
+    "idf = scipy.log(3 / 2)\n",
+    "tf, idf, tf * idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.3333333333333333, 0.0, 0.0)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tfidf(\"a\",abc,D)\n",
+    "tf  = 1 / 3\n",
+    "idf = scipy.log(3/3)\n",
+    "tf, idf, tf * idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.3333333333333333, 0.40546510810816438, 0.13515503603605478)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tfidf(\"b\",abc,D)\n",
+    "tf = 1 / 3\n",
+    "idf = scipy.log(3/2)\n",
+    "tf, idf, tf*idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.3333333333333333, 1.0986122886681098, 0.36620409622270322)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tfidf(\"c\",abc,D)\n",
+    "tf  = 1 / 3\n",
+    "idf = scipy.log(3/1)\n",
+    "tf, idf, tf * idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ['a', 'b', 'c', 'a', 'a']\n",
+    "a.count('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, abb, abc = [\"a\"], [\"a\",\"b\",\"b\"], [\"a\",\"b\",\"c\"]\n",
+    "D=[a,abb,abc]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 正規作法\n",
+    "doc_contains_term = []\n",
+    "for doc in D:\n",
+    "    if 'b' in doc:\n",
+    "        doc_contains_term.append(doc)\n",
+    "len(doc_contains_term)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 一行文作法\n",
+    "len([doc for doc in D if 'b' in doc])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 建立 tf * idf 函式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def tfidf(term, doc, D):\n",
+    "    tf  =  doc.count(term)  / len(doc)\n",
+    "    idf =  scipy.log(len(D) /  len([d for d in D if term in d]))\n",
+    "    return tf * idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# 第二版: 分母 + 1\n",
+    "def tfidf2(term, doc, D):\n",
+    "    tf  =  doc.count(term)  / len(doc)\n",
+    "    idf =  scipy.log(len(D) /  (len([d for d in D if term in d]) + 1 ))\n",
+    "    return tf * idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.270310072072\n",
+      "0.0\n",
+      "0.135155036036\n",
+      "0.366204096223\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tfidf(\"a\",a,D))\n",
+    "print(tfidf(\"b\",abb,D))\n",
+    "print(tfidf(\"a\",abc,D))\n",
+    "print(tfidf(\"b\",abc,D))\n",
+    "print(tfidf(\"c\",abc,D))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
