--- a/20161109Demo.ipynb
+++ b/20161109Demo.ipynb
@@ -709,6 +709,164 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 建立詞頻矩陣"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'【 更新 】 柯P ： 洪智坤 洩漏 公文 案還 沒 看到 公文 今處理'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = '【更新】柯P：洪智坤洩漏公文案還沒看到公文今處理'\n",
+    "#for w in jieba.cut(s):\n",
+    "#    print(w)\n",
+    "' '.join(jieba.cut(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "jieba.load_userdict(\"userdict.txt\")\n",
+    "ary=['【更新】柯P：洪智坤洩漏公文案還沒看到公文今處理',\n",
+    "     '留洪智坤 柯：殘障求職不易',\n",
+    "     '人事處議處洪智坤 柯P：不清楚議處結果']\n",
+    "\n",
+    "corpus = []\n",
+    "for title in ary:\n",
+    "    corpus.append(' '.join(jieba.cut(title)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['【 更新 】 柯P ： 洪智坤 洩漏 公文 案還 沒 看到 公文 今處理',\n",
+       " '留 洪智坤   柯 ： 殘障 求職 不易',\n",
+       " '人事 處議 處 洪智坤   柯P ： 不 清楚 議處 結果']"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- '【更新】柯P：洪智坤洩漏公文案還沒看到公文今處理',\n",
+    "- '留洪智坤 柯：殘障求職不易',\n",
+    "- '人事處議處洪智坤 柯P：不清楚議處結果']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "不易 人事 今處理 公文 更新 柯p 案還 殘障 求職 洩漏 洪智坤 清楚 看到 結果 處議 議處\n",
+      "[[0 0 1 2 1 1 1 0 0 1 1 0 1 0 0 0]\n",
+      " [1 0 0 0 0 0 0 1 1 0 1 0 0 0 0 0]\n",
+      " [0 1 0 0 0 1 0 0 0 0 1 1 0 1 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "word=vectorizer.get_feature_names()\n",
+    "print(' '.join(word))\n",
+    "print(X.toarray())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 計算tf-idf 權值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.          0.          0.31738473  0.63476946  0.31738473  0.24137927\n",
+      "   0.31738473  0.          0.          0.31738473  0.18745253  0.\n",
+      "   0.31738473  0.          0.          0.        ]\n",
+      " [ 0.54645401  0.          0.          0.          0.          0.          0.\n",
+      "   0.54645401  0.54645401  0.          0.32274454  0.          0.          0.\n",
+      "   0.          0.        ]\n",
+      " [ 0.          0.41074684  0.          0.          0.          0.31238356\n",
+      "   0.          0.          0.          0.          0.2425937   0.41074684\n",
+      "   0.          0.41074684  0.41074684  0.41074684]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "transformer=TfidfTransformer()\n",
+    "tfidf=transformer.fit_transform(X)\n",
+    "weight=tfidf.toarray()\n",
+    "print(weight)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
