--- a/20161109Demo.ipynb
+++ b/20161109Demo.ipynb
@@ -1142,6 +1142,556 @@
     "b = b.argsort()\n",
     "b"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 蒐集蘋果新聞資料爬蟲"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "domain  = 'http://www.appledaily.com.tw'\n",
+    "urllist = []\n",
+    "## 抓取每頁分頁清單\n",
+    "for page in range(1,31):\n",
+    "    res = requests.get('http://www.appledaily.com.tw/realtimenews/section/new/{}'.format(page))\n",
+    "    soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "    # 根據清單拿出標題\n",
+    "    for news in soup.select('.rtddt a'):\n",
+    "        url = domain + news['href']\n",
+    "        urllist.append(url)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getNewsContent(url):\n",
+    "    try:\n",
+    "        res = requests.get(url)\n",
+    "        soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "        title   = soup.select('#h1')[0].text.strip()\n",
+    "        content = soup.select('#summary')[0].text.strip()\n",
+    "        return {'title':title, 'content':content}\n",
+    "    except:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'content': '受到東北季風影響，淡水今天清晨出現16.8℃，寫下入冬以來平地最低溫紀錄，另外包括新竹17.8℃、蘇澳18℃、基隆與板橋的18.4℃、台北18.6℃、梧棲18.7℃、台中19.9℃，都寫下該測站入冬最低溫紀錄，等於有8個測站都創下入冬最低溫。氣象局表示，今起到周五都受東北季風影響，北台灣濕冷、低溫下探18℃，不排除有更低溫，中南部低溫在19至20℃，各地早晚偏涼，中南部日夜溫差大，預計周末東北季風減弱，但北台灣仍有短暫雨，預計下周一才會明顯轉趨穩定。（生活中心／台北報導）',\n",
+       " 'title': '東北季風發威\\u3000台北等8測站創入冬最低溫'}"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getNewsContent('http://www.appledaily.com.tw/realtimenews/article/life/20161109/985027/%E6%9D%B1%E5%8C%97%E5%AD%A3%E9%A2%A8%E7%99%BC%E5%A8%81%E3%80%80%E5%8F%B0%E5%8C%97%E7%AD%898%E6%B8%AC%E7%AB%99%E5%89%B5%E5%85%A5%E5%86%AC%E6%9C%80%E4%BD%8E%E6%BA%AB')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "applenews = [getNewsContent(url) for url in urllist]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "df = pandas.DataFrame(applenews)\n",
+    "df.to_excel('20161109news.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 讀取蘋果新聞"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>content</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>川普打敗希拉蕊，成為美國新任總統。在德洲長大的美籍藝人Janet今出席活動，對川普當選，在德...</td>\n",
+       "      <td>川普當選美總統　Janet「不要只想到自己」</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>從事桃園機場接送的楊姓、紀姓司機，今年初不滿林姓同業降價接單，在「派趟勿喇賽」、「市區派趟聊...</td>\n",
+       "      <td>不滿削價接客　公開同業姓名、手機判拘</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(更新:新增過音影片)台中新社花海11月5日才開幕，就有網友向《蘋果》投訴指出，臉書發現有不...</td>\n",
+       "      <td>花海拍美照踩死花　民眾爆料批「沒公德心」</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>美國共和黨總統候選人川普（Donald Trump）極有可能成為下屆美國總統，不但異於過去多...</td>\n",
+       "      <td>人民選擇川普　諾貝爾桂冠：「絕望」</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>（更新：卡卡推特　美國隊長推特）美國總統大選開票接近尾聲，原本外界看好的希拉蕊一路落後給川普...</td>\n",
+       "      <td>【好萊塢哀號】川普贏了！ 美國隊長怒喊「丟臉」</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             content                    title\n",
+       "0  川普打敗希拉蕊，成為美國新任總統。在德洲長大的美籍藝人Janet今出席活動，對川普當選，在德...   川普當選美總統　Janet「不要只想到自己」\n",
+       "1  從事桃園機場接送的楊姓、紀姓司機，今年初不滿林姓同業降價接單，在「派趟勿喇賽」、「市區派趟聊...       不滿削價接客　公開同業姓名、手機判拘\n",
+       "2  (更新:新增過音影片)台中新社花海11月5日才開幕，就有網友向《蘋果》投訴指出，臉書發現有不...     花海拍美照踩死花　民眾爆料批「沒公德心」\n",
+       "3  美國共和黨總統候選人川普（Donald Trump）極有可能成為下屆美國總統，不但異於過去多...        人民選擇川普　諾貝爾桂冠：「絕望」\n",
+       "4  （更新：卡卡推特　美國隊長推特）美國總統大選開票接近尾聲，原本外界看好的希拉蕊一路落後給川普...  【好萊塢哀號】川普贏了！ 美國隊長怒喊「丟臉」"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas\n",
+    "df = pandas.read_excel('20161109news.xlsx')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>content</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>美國總統大選開票結果即將出爐之際，國民黨下午3時22分發出「洪主席恭賀川普當選美國總統」新聞...</td>\n",
+       "      <td>國民黨搶頭香　洪秀柱第一時間恭賀川普當選</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>羅伯特亞當斯／自由作家2013年9月間爆發「馬王政爭」，檢察總長夜奔總統官邸密告官場大咖的諸...</td>\n",
+       "      <td>「洩密門」的總統學</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
+       "      <td>前總統馬英九遭民進黨立委柯建銘自訴洩密等罪，台北地院昨首度以被告身分傳馬出庭，馬英九與柯建銘...</td>\n",
+       "      <td>馬英九、柯建銘當庭交鋒　柯要求法院這樣做</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>前總統馬英九自卸任元首職務後，司法單位陸續針對他涉及的司法案件展開調查，為了3年前的馬王政爭...</td>\n",
+       "      <td>【壹週刊】馬英九出庭　法界：教唆洩密恐成罪</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>428</th>\n",
+       "      <td>蘋果日報頭條今天揭曉 美首位女總統？ 瘋狂素人總統？全球矚目的美國大選，昨天投票，究竟美國將...</td>\n",
+       "      <td>十一月九日各報頭條搶先報</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474</th>\n",
+       "      <td>2013年9月8日前總統馬英九在總統府舉行記者會，痛斥立法院前院長王金平司法關說，開啟「馬王...</td>\n",
+       "      <td>【有恨片】318學運漫延　就是因為馬英九只考慮那2秒</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>551</th>\n",
+       "      <td>（更新：新增動新聞）前總統馬英九遭民進黨立委柯建銘自訴涉嫌洩密等罪，台北地院今天下午將首度以...</td>\n",
+       "      <td>柯建銘律師聲請羈押馬英九　北院：另案裁定</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>606</th>\n",
+       "      <td>●【有片】超誇張 婦人7年家用垃圾都丟美麗華百貨http://ppt.cc/2Z92F●【不...</td>\n",
+       "      <td>【鄉民焦點】無極限！奧客家裡垃圾7年都丟美麗華竟無法罰●希拉蕊or川普？美國新總統明午誕生</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>614</th>\n",
+       "      <td>前總統馬英九今天下午為立委柯建銘自訴他涉嫌洩密等罪到台北地院應訊，台北地院為讓更多民眾可以旁...</td>\n",
+       "      <td>馬英九柯建銘法庭論戰　民眾只給60分</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>648</th>\n",
+       "      <td>民進黨立院黨團總召集人柯建銘自訴前總統馬英九洩密案，馬英九下午首度以被告身分到台北地院出庭。...</td>\n",
+       "      <td>洪秀柱批柯建銘報私仇　「企圖羞辱馬英九」</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806</th>\n",
+       "      <td>前總統馬英九遭立委柯建銘自訴涉嫌洩密、加重誹謗，今天下午馬英九首度出庭，這也是他卸任後，首度...</td>\n",
+       "      <td>馬英九挨告首出庭　148字捍清白</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>811</th>\n",
+       "      <td>民進黨立院黨團總召柯建銘自訴前總統馬英九洩密案，馬下午首度以被告身分到台北地院出庭之際，馬英...</td>\n",
+       "      <td>【出庭聲明】馬英九：我沒犯罪　任何人都不應司法關說</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>815</th>\n",
+       "      <td>民進黨立委柯建銘自訴前總統馬英九洩密案，馬下午首度以被告身分到台北地院出庭，前副總統吳敦義接...</td>\n",
+       "      <td>【還原馬王政爭】吳敦義自爆「鍘王」前　馬英九曾猶豫2秒</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>818</th>\n",
+       "      <td>前總統馬英九遭民進黨立院黨團總召柯建銘自訴涉嫌洩密等罪，下午首度以被告身分出席。總統府前副秘...</td>\n",
+       "      <td>羅智強：台灣的是非　被一群無臉人埋進棺材</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>834</th>\n",
+       "      <td>（更新：新增影片）高等法院今上午開庭審理前總統馬英九自訴控告名嘴周玉蔻涉犯加重誹謗案，馬與證...</td>\n",
+       "      <td>柯建銘告馬英九今開庭　周玉蔻預言「他」會贏</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>853</th>\n",
+       "      <td>(更新:新增影片)前總統馬英九今天下午將針對民進黨立委柯建銘自訴控告洩密等案，到北院出庭應訊...</td>\n",
+       "      <td>【交手片】馬英九出庭應訊　柯建銘：怎有臉跟我辯</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               content  \\\n",
+       "18   美國總統大選開票結果即將出爐之際，國民黨下午3時22分發出「洪主席恭賀川普當選美國總統」新聞...   \n",
+       "189  羅伯特亞當斯／自由作家2013年9月間爆發「馬王政爭」，檢察總長夜奔總統官邸密告官場大咖的諸...   \n",
+       "351  前總統馬英九遭民進黨立委柯建銘自訴洩密等罪，台北地院昨首度以被告身分傳馬出庭，馬英九與柯建銘...   \n",
+       "416  前總統馬英九自卸任元首職務後，司法單位陸續針對他涉及的司法案件展開調查，為了3年前的馬王政爭...   \n",
+       "428  蘋果日報頭條今天揭曉 美首位女總統？ 瘋狂素人總統？全球矚目的美國大選，昨天投票，究竟美國將...   \n",
+       "474  2013年9月8日前總統馬英九在總統府舉行記者會，痛斥立法院前院長王金平司法關說，開啟「馬王...   \n",
+       "551  （更新：新增動新聞）前總統馬英九遭民進黨立委柯建銘自訴涉嫌洩密等罪，台北地院今天下午將首度以...   \n",
+       "606  ●【有片】超誇張 婦人7年家用垃圾都丟美麗華百貨http://ppt.cc/2Z92F●【不...   \n",
+       "614  前總統馬英九今天下午為立委柯建銘自訴他涉嫌洩密等罪到台北地院應訊，台北地院為讓更多民眾可以旁...   \n",
+       "648  民進黨立院黨團總召集人柯建銘自訴前總統馬英九洩密案，馬英九下午首度以被告身分到台北地院出庭。...   \n",
+       "806  前總統馬英九遭立委柯建銘自訴涉嫌洩密、加重誹謗，今天下午馬英九首度出庭，這也是他卸任後，首度...   \n",
+       "811  民進黨立院黨團總召柯建銘自訴前總統馬英九洩密案，馬下午首度以被告身分到台北地院出庭之際，馬英...   \n",
+       "815  民進黨立委柯建銘自訴前總統馬英九洩密案，馬下午首度以被告身分到台北地院出庭，前副總統吳敦義接...   \n",
+       "818  前總統馬英九遭民進黨立院黨團總召柯建銘自訴涉嫌洩密等罪，下午首度以被告身分出席。總統府前副秘...   \n",
+       "834  （更新：新增影片）高等法院今上午開庭審理前總統馬英九自訴控告名嘴周玉蔻涉犯加重誹謗案，馬與證...   \n",
+       "853  (更新:新增影片)前總統馬英九今天下午將針對民進黨立委柯建銘自訴控告洩密等案，到北院出庭應訊...   \n",
+       "\n",
+       "                                             title  \n",
+       "18                            國民黨搶頭香　洪秀柱第一時間恭賀川普當選  \n",
+       "189                                      「洩密門」的總統學  \n",
+       "351                           馬英九、柯建銘當庭交鋒　柯要求法院這樣做  \n",
+       "416                          【壹週刊】馬英九出庭　法界：教唆洩密恐成罪  \n",
+       "428                                   十一月九日各報頭條搶先報  \n",
+       "474                     【有恨片】318學運漫延　就是因為馬英九只考慮那2秒  \n",
+       "551                           柯建銘律師聲請羈押馬英九　北院：另案裁定  \n",
+       "606  【鄉民焦點】無極限！奧客家裡垃圾7年都丟美麗華竟無法罰●希拉蕊or川普？美國新總統明午誕生  \n",
+       "614                             馬英九柯建銘法庭論戰　民眾只給60分  \n",
+       "648                           洪秀柱批柯建銘報私仇　「企圖羞辱馬英九」  \n",
+       "806                               馬英九挨告首出庭　148字捍清白  \n",
+       "811                      【出庭聲明】馬英九：我沒犯罪　任何人都不應司法關說  \n",
+       "815                    【還原馬王政爭】吳敦義自爆「鍘王」前　馬英九曾猶豫2秒  \n",
+       "818                           羅智強：台灣的是非　被一群無臉人埋進棺材  \n",
+       "834                          柯建銘告馬英九今開庭　周玉蔻預言「他」會贏  \n",
+       "853                        【交手片】馬英九出庭應訊　柯建銘：怎有臉跟我辯  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.content.str.contains('馬英九')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\cathay\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 1.269 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "jieba.load_userdict(\"userdict.txt\")\n",
+    "corpus = []\n",
+    "titles = []\n",
+    "for news in df.iterrows():    \n",
+    "    titles.append(news[1].title)\n",
+    "    corpus.append(' '.join(jieba.cut(news[1].content)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36311"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word=vectorizer.get_feature_names()\n",
+    "len(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(899, 36311)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "transformer=TfidfTransformer()\n",
+    "tfidf=transformer.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(899, 36311)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "cosine_similarities = cosine_similarity(tfidf, tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "川普當選美總統　Janet「不要只想到自己」 1.0\n",
+      "Janet崩潰暴哭「很孤單」　揭憂鬱病史絕望吶喊 0.147133807474\n",
+      "川普若當選　台灣學者：亞太國家都要重新上課 0.106005826482\n",
+      "美大選陷入拉鋸　學者：唐鳳酸川普「眼睛有業障」不妥 0.105698950312\n"
+     ]
+    }
+   ],
+   "source": [
+    "titles[0]\n",
+    "for idx in cosine_similarities[0].argsort()[::-1]:\n",
+    "    if  cosine_similarities[0][idx] > 0.1:\n",
+    "        print(titles[idx],  cosine_similarities[0][idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getSimiliarArticle(articleid):\n",
+    "    print('查詢新聞:', titles[articleid])\n",
+    "    for idx in cosine_similarities[articleid].argsort()[::-1][1:]:\n",
+    "        if  cosine_similarities[articleid][idx] > 0.1:\n",
+    "            print('相關新聞:', titles[idx],  cosine_similarities[0][idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "查詢新聞: 馬英九、柯建銘當庭交鋒　柯要求法院這樣做\n",
+      "相關新聞: 柯建銘律師聲請羈押馬英九　北院：另案裁定 0.0196625263899\n",
+      "相關新聞: 馬英九挨告首出庭　148字捍清白 0.0174159405854\n",
+      "相關新聞: 【出庭聲明】馬英九：我沒犯罪　任何人都不應司法關說 0.0183971813619\n",
+      "相關新聞: 洪秀柱批柯建銘報私仇　「企圖羞辱馬英九」 0.0130120227732\n",
+      "相關新聞: 羅智強：台灣的是非　被一群無臉人埋進棺材 0.0297148629537\n",
+      "相關新聞: 【交手片】馬英九出庭應訊　柯建銘：怎有臉跟我辯 0.0111998901418\n",
+      "相關新聞: 【壹週刊】馬英九出庭　法界：教唆洩密恐成罪 0.00768503197906\n",
+      "相關新聞: 「洩密門」的總統學 0.012359177879\n",
+      "相關新聞: 柯建銘告馬英九今開庭　周玉蔻預言「他」會贏 0.0100006164601\n",
+      "相關新聞: 十一月九日各報頭條搶先報 0.0763571766517\n",
+      "相關新聞: 【有恨片】318學運漫延　就是因為馬英九只考慮那2秒 0.0216065908631\n",
+      "相關新聞: 【還原馬王政爭】吳敦義自爆「鍘王」前　馬英九曾猶豫2秒 0.0179290824918\n",
+      "相關新聞: 馬英九柯建銘法庭論戰　民眾只給60分 0.0232490516328\n",
+      "相關新聞: 台南地院修復啟用　賴清德致詞洗臉司法院長 0.0111318188693\n",
+      "相關新聞: 邱太三明拜會許宗力　最高法院可望常態辯論 0.0123889236389\n"
+     ]
+    }
+   ],
+   "source": [
+    "getSimiliarArticle(351)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
