--- a/20161109Demo.ipynb
+++ b/20161109Demo.ipynb
@@ -1686,6 +1686,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 1, 3, 2]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [2,3,1,4,5]\n",
+    "a[::-1] # for(i = len(a); i>0 ; i--)\n",
+    "a[::-1][1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
