--- a/20161111Demo.ipynb
+++ b/20161111Demo.ipynb
@@ -131,13 +131,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 建立 tf-idf 矩陣"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       ..., \n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "transformer = TfidfTransformer()\n",
+    "tfidf       = transformer.fit_transform(X)\n",
+    "tfidf.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(147, 12247)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf.shape"
+   ]
   }
  ],
  "metadata": {
