--- a/20161111Demo.ipynb
+++ b/20161111Demo.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +181,7 @@
        "(147, 12247)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,6 +189,152 @@
    "source": [
     "tfidf.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 使用Kmeans 進行分群"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import cluster\n",
+    "#?cluster.KMeans\n",
+    "c=cluster.KMeans(n_clusters=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "weight = tfidf.toarray()\n",
+    "k_data = c.fit_predict(weight)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 使用Enumerate 取出分群結果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2\n",
+      "1 5\n",
+      "2 3\n",
+      "3 4\n",
+      "4 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= [2,5,3,4,7]\n",
+    "for idx, e in enumerate(a):\n",
+    "    print(idx, e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "蔡依林淚奪金曲 錦榮傳訊恭喜\n",
+      "陳奕迅、張惠妹稱王封后  蔡依林抱回最大獎\n",
+      "陳奕迅、莫文蔚伴侶均不知阿娜答金曲獲獎\n",
+      "金曲26／蔡依林擒３獎大勝　淚崩再挺婚姻平權\n",
+      "金曲26／張惠妹奪歌后卻失落　要世界感受彩虹力量\n",
+      "金曲26／蔡依林淚奪最佳專輯＋完整得獎名單\n",
+      "僅次Jolin！徐佳瑩入圍6獎全槓被封遺珠\n",
+      "金曲最風光！蔡依林紅毯全勝又獲3獎成大贏家\n",
+      "張惠妹3度封后  想破江蕙紀錄\n",
+      "金曲26／陳奕迅稱王謝台灣　張惠妹封后秒噴淚\n",
+      "蔡依林呸大贏家  金曲最佳專輯獎\n",
+      "金曲獎完整得獎名單！阿妹封后 陳奕迅稱王\n",
+      "第26屆金曲獎 陳奕迅奪歌王、阿妹封歌后\n",
+      "金曲最佳國語專輯：呸\n",
+      "《金曲26》2015金曲獎得獎名單 線上直播懶人包\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pos, group in enumerate(k_data):\n",
+    "    if group == 1:\n",
+    "        print(titles[pos])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 使用Numpy 取出分群結果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['蔡依林淚奪金曲 錦榮傳訊恭喜', '陳奕迅、張惠妹稱王封后  蔡依林抱回最大獎', '陳奕迅、莫文蔚伴侶均不知阿娜答金曲獲獎',\n",
+       "       '金曲26／蔡依林擒３獎大勝\\u3000淚崩再挺婚姻平權', '金曲26／張惠妹奪歌后卻失落\\u3000要世界感受彩虹力量',\n",
+       "       '金曲26／蔡依林淚奪最佳專輯＋完整得獎名單', '僅次Jolin！徐佳瑩入圍6獎全槓被封遺珠',\n",
+       "       '金曲最風光！蔡依林紅毯全勝又獲3獎成大贏家', '張惠妹3度封后  想破江蕙紀錄',\n",
+       "       '金曲26／陳奕迅稱王謝台灣\\u3000張惠妹封后秒噴淚', '蔡依林呸大贏家  金曲最佳專輯獎',\n",
+       "       '金曲獎完整得獎名單！阿妹封后 陳奕迅稱王', '第26屆金曲獎 陳奕迅奪歌王、阿妹封歌后', '金曲最佳國語專輯：呸',\n",
+       "       '《金曲26》2015金曲獎得獎名單 線上直播懶人包'], \n",
+       "      dtype='<U26')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "new_titles = numpy.array(titles)\n",
+    "new_titles[k_data == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
