get clustering keyword

--- a/20161111Demo.ipynb
+++ b/20161111Demo.ipynb
@@ -328,6 +328,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 取出分群結果關鍵字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 6])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.sum([\n",
+    "        [0, 1], \n",
+    "        [0, 5]\n",
+    "       ], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "最佳 4.04617459463\n",
+      "專輯 2.82520550006\n",
+      "金曲 1.94067007063\n",
+      "蔡依林 1.64389056436\n",
+      "國語 1.58337074329\n",
+      "有限公司 1.2177551509\n",
+      "音樂 1.20907925857\n",
+      "張惠妹 1.1492862655\n",
+      "開心 1.10664627155\n",
+      "演唱 0.963153943651\n",
+      "股份 0.927744639562\n",
+      "專輯獎 0.921736618957\n",
+      "獲得 0.874320017843\n",
+      "歌曲 0.844433460573\n",
+      "典禮 0.781024150118\n"
+     ]
+    }
+   ],
+   "source": [
+    "#group1         = tfidf[k_data == 2].toarray()\n",
+    "group1         = tfidf[k_data == 1].toarray()\n",
+    "\n",
+    "# 計算colsums\n",
+    "group1_colsums = np.sum(group1, axis = 0)\n",
+    "\n",
+    "# 根據colsums 做由大到小的排序\n",
+    "swd = group1_colsums.argsort()[::-1]\n",
+    "\n",
+    "# 將每個column keyword 變成numpy array\n",
+    "keywords = numpy.array(vectorizer.get_feature_names())\n",
+    "for term, cnt in zip(keywords[swd][0:15], group1_colsums[swd][0:15]):\n",
+    "    print(term, cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['專輯', '金曲', '蔡依林', '國語', '有限公司', '音樂', '張惠妹', '開心', '演唱'], \n",
+       "      dtype='<U7')"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word = numpy.array(vectorizer.get_feature_names())\n",
+    "word[np.sum(tfidf[k_data == 1].toarray(), axis = 0).argsort()[::-1]][1:10]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
