add grouping function

--- a/20161111Demo.ipynb
+++ b/20161111Demo.ipynb
@@ -430,6 +430,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 抓取各群關鍵字函式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "def getGroupKeyword(group_id, top_k):\n",
+    "    group1         = tfidf[k_data == group_id].toarray()\n",
+    "\n",
+    "    # 計算colsums\n",
+    "    group1_colsums = np.sum(group1, axis = 0)\n",
+    "\n",
+    "    # 根據colsums 做由大到小的排序\n",
+    "    swd = group1_colsums.argsort()[::-1]\n",
+    "\n",
+    "    # 將每個column keyword 變成numpy array\n",
+    "    keywords = numpy.array(vectorizer.get_feature_names())\n",
+    "    for term, cnt in zip(keywords[swd][0:top_k], group1_colsums[swd][0:top_k]):\n",
+    "        print(group_id, term, cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 希臘 4.9108234637\n",
+      "0 歐元區 2.33005924094\n",
+      "0 債權 0.669524125324\n",
+      "0 公投 0.658834077342\n",
+      "0 政府 0.655118015554\n",
+      "0 債務 0.63652134643\n",
+      "0 提款 0.621601187768\n",
+      "0 可能 0.582126641745\n",
+      "0 財政部長 0.540912069506\n",
+      "0 櫃員機 0.529374471226\n",
+      "1 最佳 4.04617459463\n",
+      "1 專輯 2.82520550006\n",
+      "1 金曲 1.94067007063\n",
+      "1 蔡依林 1.64389056436\n",
+      "1 國語 1.58337074329\n",
+      "1 有限公司 1.2177551509\n",
+      "1 音樂 1.20907925857\n",
+      "1 張惠妹 1.1492862655\n",
+      "1 開心 1.10664627155\n",
+      "1 演唱 0.963153943651\n",
+      "2 樂園 4.14330231395\n",
+      "2 八仙 4.12942243844\n",
+      "2 新北市 3.93388532716\n",
+      "2 醫院 3.1762003018\n",
+      "2 現場 2.23152989783\n",
+      "2 爆炸 2.22054448284\n",
+      "2 粉塵 1.87660964446\n",
+      "2 彩色 1.82383967746\n",
+      "2 晚間 1.76313521462\n",
+      "2 全力 1.74433563207\n",
+      "3 西瓜 1.66460170799\n",
+      "3 台灣 1.6225689309\n",
+      "3 中國 1.27768694508\n",
+      "3 美國 1.1794085543\n",
+      "3 日本 1.09012430195\n",
+      "3 表示 1.03101524258\n",
+      "3 問題 1.02815489241\n",
+      "3 國民黨 1.01940906769\n",
+      "3 金曲 1.01697909732\n",
+      "3 改革 0.99394349865\n"
+     ]
+    }
+   ],
+   "source": [
+    "for group_id in numpy.unique(k_data):\n",
+    "    getGroupKeyword(group_id, 10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
